<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/prefs_categInfoUser"><EditTextPreference android:key="userName" android:title="@string/prefs_userName" /><EditTextPreference android:key="userEmail" android:title="@string/prefs_userEmail" /></PreferenceCategory>
    <PreferenceCategory android:title="@string/prefs_categDataMngmt">
        <Preference android:title="@string/prefs_clearDB" android:key="clearDB"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefs_categFeedback">
        <Preference android:title="@string/prefs_feedback" android:key="feedback"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefs_categAbout">
        <Preference android:key="appVersion" android:title="@string/prefs_appVersion"/>
        <Preference android:key="appCreators" android:title="@string/prefs_appCreators"/>
    </PreferenceCategory>
</PreferenceScreen>