<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkgrimage9f"
    android:padding="@dimen/paddingGeneral" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

    <TextView
        android:id="@+id/titleOldHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:drawableLeft="@drawable/ic_launcher"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:text="@string/app_name"
        android:textSize="26sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/reviewHistoryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:drawableLeft="@drawable/ic_rev_list"
        android:minHeight="80dp"
        android:onClick="reviewHistory"
        android:text="@string/button_reviewHistoryLabel" />

     <!--
    <Button
        android:id="@+id/searchProductButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="searchProduct"
        android:text="@string/button_searchProductLabel" />
    
-->

    <Button
        android:id="@+id/startScannerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:drawableLeft="@drawable/ic_bar_code"
        android:minHeight="80dp"
        android:onClick="startScanner"
        android:text="@string/button_startScannerLabel" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/insertEANButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="65dp"
            android:minWidth="80dip"
            android:onClick="insertEAN"
            android:text="@string/button_insertEANLabel" />

        <Button
            android:id="@+id/giveFeedbackButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="65dp"
            android:minWidth="80dip"
            android:onClick="giveFeedback"
            android:text="@string/button_giveFeedback" />

    </LinearLayout>

</LinearLayout>
</ScrollView>